slurm-3597717.out
Running on host gpu12.bc4.acrc.priv
Slurm job ID is 3597717
This job runs on the following machines:
gpu12
Processing /mnt/storage/home/mk17486/neural-networks/pytorch-subLSTM
Requirement already satisfied: numpy in /mnt/storage/home/mk17486/.local/lib/python3.7/site-packages (from torch-sublstm==0.1.0) (1.18.1)
Requirement already satisfied: torch in /mnt/storage/home/mk17486/.local/lib/python3.7/site-packages (from torch-sublstm==0.1.0) (1.4.0)
Building wheels for collected packages: torch-sublstm
  Building wheel for torch-sublstm (setup.py): started
  Building wheel for torch-sublstm (setup.py): finished with status 'error'
  ERROR: Complete output from command /mnt/storage/software/languages/miniconda/miniconda3/bin/python -u -c 'import setuptools, tokenize;__file__='"'"'/tmp/pip-req-build-hoc_nsgl/setup.py'"'"';f=getattr(tokenize, '"'"'open'"'"', open)(__file__);code=f.read().replace('"'"'\r\n'"'"', '"'"'\n'"'"');f.close();exec(compile(code, __file__, '"'"'exec'"'"'))' bdist_wheel -d /tmp/pip-wheel-rtoy6uzi --python-tag cp37:
  ERROR: running bdist_wheel
  running build
  running build_py
  running egg_info
  writing src/torch_sublstm.egg-info/PKG-INFO
  writing dependency_links to src/torch_sublstm.egg-info/dependency_links.txt
  writing requirements to src/torch_sublstm.egg-info/requires.txt
  writing top-level names to src/torch_sublstm.egg-info/top_level.txt
  reading manifest file 'src/torch_sublstm.egg-info/SOURCES.txt'
  writing manifest file 'src/torch_sublstm.egg-info/SOURCES.txt'
  copying src/subLSTM/basic/sublstm.cpp -> build/lib.linux-x86_64-3.7/subLSTM/basic
  running build_ext
  building 'sublstm_cuda' extension
  gcc -pthread -B /mnt/storage/software/languages/miniconda/miniconda3/compiler_compat -Wl,--sysroot=/ -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -fPIC -I/mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/torch/include -I/mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/torch/include/torch/csrc/api/include -I/mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/torch/include/TH -I/mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/torch/include/THC -I/mnt/storage/software/libraries/nvidia/cuda-10.0/include -I/mnt/storage/software/languages/miniconda/miniconda3/include/python3.7m -c src/subLSTM/basic/sublstm.cpp -o build/temp.linux-x86_64-3.7/src/subLSTM/basic/sublstm.o -DTORCH_API_INCLUDE_EXTENSION_H -DTORCH_EXTENSION_NAME=sublstm_cuda -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++11
  cc1plus: warning: command line option '-Wstrict-prototypes' is valid for C/ObjC but not for C++
  src/subLSTM/basic/sublstm.cpp:138:3: error: 'RegisterOperators' is not a member of 'torch'
     torch::RegisterOperators("sublstm::forward", &forward)
     ^
  src/subLSTM/basic/sublstm.cpp:137:13: warning: 'registry' defined but not used [-Wunused-variable]
   static auto registry =
               ^
  error: command 'gcc' failed with exit status 1
  ----------------------------------------
  ERROR: Failed building wheel for torch-sublstm
  Running setup.py clean for torch-sublstm
Failed to build torch-sublstm
Installing collected packages: torch-sublstm
  Found existing installation: torch-sublstm 0.1.0
    Uninstalling torch-sublstm-0.1.0:
      Successfully uninstalled torch-sublstm-0.1.0
  Running setup.py install for torch-sublstm: started
    Running setup.py install for torch-sublstm: finished with status 'error'
    ERROR: Complete output from command /mnt/storage/software/languages/miniconda/miniconda3/bin/python -u -c 'import setuptools, tokenize;__file__='"'"'/tmp/pip-req-build-hoc_nsgl/setup.py'"'"';f=getattr(tokenize, '"'"'open'"'"', open)(__file__);code=f.read().replace('"'"'\r\n'"'"', '"'"'\n'"'"');f.close();exec(compile(code, __file__, '"'"'exec'"'"'))' install --record /tmp/pip-record-f5n9lq7t/install-record.txt --single-version-externally-managed --compile --user --prefix=:
    ERROR: running install
    running build
    running build_py
    creating build
    creating build/lib.linux-x86_64-3.7
    creating build/lib.linux-x86_64-3.7/subLSTM
    copying src/subLSTM/__init__.py -> build/lib.linux-x86_64-3.7/subLSTM
    running egg_info
    writing src/torch_sublstm.egg-info/PKG-INFO
    writing dependency_links to src/torch_sublstm.egg-info/dependency_links.txt
    writing requirements to src/torch_sublstm.egg-info/requires.txt
    writing top-level names to src/torch_sublstm.egg-info/top_level.txt
    reading manifest file 'src/torch_sublstm.egg-info/SOURCES.txt'
    writing manifest file 'src/torch_sublstm.egg-info/SOURCES.txt'
    creating build/lib.linux-x86_64-3.7/subLSTM/basic
    copying src/subLSTM/basic/sublstm.cpp -> build/lib.linux-x86_64-3.7/subLSTM/basic
    copying src/subLSTM/basic/sublstm_kernel.cu -> build/lib.linux-x86_64-3.7/subLSTM/basic
    running build_ext
    building 'sublstm_cuda' extension
    creating build/temp.linux-x86_64-3.7
    creating build/temp.linux-x86_64-3.7/src
    creating build/temp.linux-x86_64-3.7/src/subLSTM
    creating build/temp.linux-x86_64-3.7/src/subLSTM/basic
    gcc -pthread -B /mnt/storage/software/languages/miniconda/miniconda3/compiler_compat -Wl,--sysroot=/ -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -fPIC -I/mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/torch/include -I/mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/torch/include/torch/csrc/api/include -I/mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/torch/include/TH -I/mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/torch/include/THC -I/mnt/storage/software/libraries/nvidia/cuda-10.0/include -I/mnt/storage/software/languages/miniconda/miniconda3/include/python3.7m -c src/subLSTM/basic/sublstm.cpp -o build/temp.linux-x86_64-3.7/src/subLSTM/basic/sublstm.o -DTORCH_API_INCLUDE_EXTENSION_H -DTORCH_EXTENSION_NAME=sublstm_cuda -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++11
    cc1plus: warning: command line option '-Wstrict-prototypes' is valid for C/ObjC but not for C++
    src/subLSTM/basic/sublstm.cpp:138:3: error: 'RegisterOperators' is not a member of 'torch'
       torch::RegisterOperators("sublstm::forward", &forward)
       ^
    src/subLSTM/basic/sublstm.cpp:137:13: warning: 'registry' defined but not used [-Wunused-variable]
     static auto registry =
                 ^
    error: command 'gcc' failed with exit status 1
    ----------------------------------------
  Rolling back uninstall of torch-sublstm
  Moving to /mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/subLSTM/
   from /mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/~1bLSTM
  Moving to /mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/sublstm_cuda.so
   from /tmp/pip-uninstall-3vr8wdtt/sublstm_cuda.so
  Moving to /mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/torch_sublstm-0.1.0.dist-info/
   from /mnt/storage/home/mk17486/.local/lib/python3.7/site-packages/~1rch_sublstm-0.1.0.dist-info
ERROR: Command "/mnt/storage/software/languages/miniconda/miniconda3/bin/python -u -c 'import setuptools, tokenize;__file__='"'"'/tmp/pip-req-build-hoc_nsgl/setup.py'"'"';f=getattr(tokenize, '"'"'open'"'"', open)(__file__);code=f.read().replace('"'"'\r\n'"'"', '"'"'\n'"'"');f.close();exec(compile(code, __file__, '"'"'exec'"'"'))' install --record /tmp/pip-record-f5n9lq7t/install-record.txt --single-version-externally-managed --compile --user --prefix=" failed with error code 1 in /tmp/pip-req-build-hoc_nsgl/
subLSTMCuda
slurmstepd: error: *** JOB 3597717 ON gpu12 CANCELLED AT 2020-04-18T16:55:21 ***
